[package]
name = "caspiler"
version = "0.0.0" # when updating, also update 'html_root_url' in lib.rs
authors = ["Jonas Pauli <jonaspauli089@gmail.com>"]
edition = "2021"
description = "CasperLabs execution engine crates."
readme = "README.md"
license = "Apache-2.0"
[dependencies]
helpers = {path='./helpers'}
casper-types="1.4.5"
code_generator = {path='./code_generator'}
serde = { version = "1", features = ["alloc"], default-features = false }
serde_json="1.0.93"
