[package]
name = "caspiler"
version = "0.0.0" # when updating, also update 'html_root_url' in lib.rs
authors = ["Jonas Pauli <jonaspauli089@gmail.com>"]
edition = "2021"
description = "Casper R&D ABIs"
readme = "README.md"
license = "Apache-2.0"
[dependencies]
helpers = {path='./helpers'}
#code_generator = {path='./code_generator'}
serde_json="1.0.93"

# Casper smart contract dependencies
serde = { version = "1", features = ["derive", "alloc"], default-features = false }
base16 = { version = "0.2", default-features = false, features = ["alloc"] }
#code_generator = { path = './code_generator'}
casper-contract = { version = "1.4.4", default-features = false, features = ["test-support"] }
casper-types = "1.5"
# Erroring
casper-serde-json-wasm = { path = "./casper-serde-json-wasm"}

[dependencies.code_generator]
path = "./code_generator"
default-features = false
