[package]
name = "casper-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn="2.0.39"
quote="1.0.33"
proc-macro2="1.0.69"
libloading="0.8.1"
casper-types = "4.0.0"
serde_json="1.0.108"
helpers = {path='../helpers'}
[lib]
proc-macro=true
