[package]
name = "code_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn="1.0.109"
quote="1.0.23"
proc-macro2="1.0.51"
libloading="0.7.4"
casper-types="1.4.5"
serde_json="1.0.93"
helpers = {path='../helpers'}
[lib]
proc-macro=true
