[package]
name = "caspiler"
version = "0.0.0" # when updating, also update 'html_root_url' in lib.rs
authors = ["Jonas Pauli <jonaspauli089@gmail.com>"]
edition = "2021"
description = "Casper R&D ABIs"
readme = "README.md"
license = "Apache-2.0"
[dependencies]
helpers = {path='../../helpers'}
casper-macros = { path='../../casper-macros', default-features=false }
serde_json="1.0.93"

# Casper smart contract dependencies
serde = { version = "1", features = ["derive", "alloc"], default-features = false }
base16 = { version = "0.2", default-features = false, features = ["alloc"] }
casper-contract = { version = "3.0.0", default-features = false, features = ["test-support"] }
casper-types = "3.0.0"

