[package]
authors = [
    "Jorge Aparicio <jorge@japaric.io>",
    "Ethan Frey <ethanfrey@noreply.github.com>",
    "Simon Warta <webmaster128@noreply.github.com>",
    "Mauro Lacy <maurolacy@noreply.github.com>",
    "Bartłomiej Kuras <hashedone@noreply.github.com>",
]
categories = ["wasm"]
description = "serde_json for Wasm programs (small, deterministic, no floats)"
documentation = "https://docs.rs/serde-json-wasm"
edition = "2018"
keywords = ["serde", "json", "wasm"]
license = "MIT OR Apache-2.0"
name = "casper-serde-json-wasm"
readme = "README.md"
repository = "https://github.com/CosmWasm/serde-json-wasm"
version = "0.4.1"
exclude = [
    ".cargo/",
    ".github/",
    ".gitignore",
]

[features]
std = []

[dependencies]
serde = { version = "^1.0.80", default-features = false, features = ["alloc"] }
serde_json = { version ="^1.0.59", default-features = false, features = ["alloc"] }

[dev-dependencies]
serde_derive = "^1.0.80"

